tests/build/impl_ui_node_macro/fail/delegate_expr_error_incorrect_type_child.rs
use zero_ui::core::{impl_ui_node, UiNode};

struct NotANode;

struct MyNode {
    child: NotANode,
}

#[impl_ui_node(child)]
impl UiNode for MyNode {}

fn main() {}
